--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/core": "^7.9.0",
     "@types/react": "^17.0.3",
     "@types/react-native": "^0.64.2",
+    "babel-plugin-module-resolver": "^4.1.0",
     "typescript": "^4.2.4"
   },
   "private": true
