--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "fb-watchman": "^2.0.1",
+    "formik": "^2.2.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
@@ -26,8 +27,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@types/jest": "^26.0.22",
     "@types/react": "^17.0.3",
-    "@types/react-native": "^0.64.2",
+    "@types/react-native": "^0.64.4",
+    "@types/react-navigation": "^3.4.0",
+    "@types/react-test-renderer": "^17.0.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "typescript": "^4.2.4"
   },
