--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
       "components/*": ["./src/components/*"],
       "containers/*": ["./src/containers/*"],
       "contexts/*": ["./src/contexts/*"],
+      "lib/*": ["./src/lib/*"],
       "interfaces/*": ["./src/common/interfaces/*"],
       "screens/*": ["./src/screens/*"],
       "tabs/*": ["./src/tabs/*"]
