--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.25.0",
     "eslint-config-universe": "^7.0.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-native": "^3.10.0",
     "prettier": "^2.2.1",
     "react-error-boundary": "^3.1.1",
     "typescript": "^4.2.4"
