--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "1on1",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -19,11 +20,11 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "^0.64.0",
-    "react-native-elements": "^3.4.0",
+    "react-native-eva-icons": "^1.3.1",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "1.13.0",
-    "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
+    "react-native-svg": "12.1.0",
     "react-native-typography": "^1.4.1",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
@@ -43,8 +44,11 @@
     "eslint-config-universe": "^7.0.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-native": "^3.10.0",
+    "metro": "^0.66.0",
+    "metro-core": "^0.66.0",
     "prettier": "^2.2.1",
     "react-error-boundary": "^3.1.1",
+    "react-native-svg-transformer": "^0.14.3",
     "typescript": "^4.2.4"
   },
   "eslintConfig": {
