--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
       "containers/*": ["./src/containers/*"],
       "contexts/*": ["./src/contexts/*"],
       "lib/*": ["./src/lib/*"],
+      "icons/*": ["./src/assets/icons/*"],
       "interfaces/*": ["./src/common/interfaces/*"],
       "screens/*": ["./src/screens/*"],
       "styles/*": ["./src/styles/*"],
