--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest --watchAll"
   },
   "dependencies": {
+    "@expo/metro-config": "^0.1.65",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
@@ -44,10 +45,9 @@
     "eslint-config-universe": "^7.0.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-native": "^3.10.0",
-    "metro": "^0.66.0",
-    "metro-core": "^0.66.0",
     "prettier": "^2.2.1",
     "react-error-boundary": "^3.1.1",
+    "react-native-bundle-visualizer": "^2.2.1",
     "react-native-svg-transformer": "^0.14.3",
     "typescript": "^4.2.4"
   },
