--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@react-navigation/stack": "^5.14.4",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "expo-updates": "~0.4.1",
     "fb-watchman": "^2.0.1",
     "formik": "^2.2.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "^0.64.0",
     "react-native-eva-icons": "^1.3.1",
+    "react-native-exception-handler": "^2.10.10",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "1.13.0",
     "react-native-screens": "~2.15.2",
