--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "formik": "^2.2.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "^0.64.0",
-    "react-native-eva-icons": "^1.3.1",
+    "react-native": "0.64.0",
     "react-native-exception-handler": "^2.10.10",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "1.13.0",
@@ -35,6 +34,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@svgr/cli": "^5.5.0",
     "@types/jest": "^26.0.23",
     "@types/react": "^17.0.4",
     "@types/react-native": "^0.64.4",
@@ -50,7 +50,6 @@
     "prettier": "^2.2.1",
     "react-error-boundary": "^3.1.1",
     "react-native-bundle-visualizer": "^2.2.1",
-    "react-native-svg-transformer": "^0.14.3",
     "typescript": "^4.2.4"
   },
   "eslintConfig": {
