--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
-    "expo": "~40.0.0",
+    "expo": "41.0.0",
     "expo-status-bar": "~1.0.3",
-    "expo-updates": "~0.4.1",
+    "expo-updates": "~0.5.4",
     "fb-watchman": "^2.0.1",
     "formik": "^2.2.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "0.64.0",
+    "react-native": "0.63.3",
     "react-native-exception-handler": "^2.10.10",
-    "react-native-gesture-handler": "~1.8.0",
-    "react-native-reanimated": "1.13.0",
-    "react-native-screens": "~2.15.2",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-reanimated": "~2.1.0",
+    "react-native-screens": "~3.0.0",
     "react-native-svg": "12.1.0",
     "react-native-typography": "^1.4.1",
     "react-native-web": "~0.13.12",
