Chore: Install packages for tab-view navigation.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/metro-config": "^0.1.65",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.11",
+    "@react-navigation/material-top-tabs": "^6.0.0-next.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "expo": "41.0.0",
@@ -27,9 +28,12 @@
     "react-native": "0.63.3",
     "react-native-exception-handler": "^2.10.10",
     "react-native-gesture-handler": "~1.10.2",
-    "react-native-reanimated": "~2.1.0",
+    "react-native-pager-view": "5.0.12",
+    "react-native-reanimated": "^2.1.0",
+    "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-svg": "12.1.0",
+    "react-native-tab-view": "^3.0.1",
     "react-native-typography": "^1.4.1",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
