--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-animated-pagination-dots": "^0.1.72",
     "react-native-exception-handler": "^2.10.10",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-pager-view": "5.0.12",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
-    "react-native-svg": "12.1.0",
     "react-native-tab-view": "^3.0.1",
     "react-native-typography": "^1.4.1",
     "react-native-web": "~0.13.12",
