feat(onboarding): Install react-native-modal & add illustrations

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
       "contexts/*": ["./src/contexts/*"],
       "lib/*": ["./src/lib/*"],
       "icons/*": ["./src/assets/icons/index"],
+      "images/*": ["./src/assets/images/*"],
       "interfaces/*": ["./src/common/interfaces/*"],
       "screens/*": ["./src/screens/*"],
       "styles/*": ["./src/styles/*"],
