--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-animated-pagination-dots": "^0.1.72",
     "react-native-exception-handler": "^2.10.10",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-modal": "^11.10.0",
     "react-native-pager-view": "5.0.12",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "3.2.0",
