--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "0.63.3",
     "react-native-animated-pagination-dots": "^0.1.72",
     "react-native-exception-handler": "^2.10.10",
+    "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-modal": "^11.10.0",
     "react-native-pager-view": "5.0.12",
