Chore: initialize electron-expo

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,11 @@ packages_cache
 package-lock.json
 yarn.lock
 yarn-error.log*
+
+# @generated: @expo/electron-adapter@0.0.55
+/.expo/*
+# Expo Web
+/web-build/*
+# electron-webpack
+/dist
+# @end @expo/electron-adapter
