--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/material-top-tabs": "^6.0.0-next.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "electron": "^6.0.12",
     "expo": "41.0.0",
     "expo-app-loading": "^1.0.3",
     "expo-font": "~9.1.0",
@@ -45,6 +46,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@expo/electron-adapter": "^0.0.55",
+    "@expo/webpack-config": "^0.12.77",
     "@svgr/cli": "^5.5.0",
     "@types/jest": "^26.0.23",
     "@types/react": "^17.0.4",
