--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@react-navigation/material-top-tabs": "^6.0.0-next.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
-    "electron": "^6.0.12",
     "expo": "41.0.0",
     "expo-app-loading": "^1.0.3",
     "expo-font": "~9.1.0",
@@ -57,6 +56,8 @@
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "babel-plugin-module-resolver": "^4.1.0",
+    "electron": "^13.1.2",
+    "electron-builder": "^22.11.7",
     "eslint": "^7.25.0",
     "eslint-config-universe": "^7.0.1",
     "eslint-plugin-react": "^7.23.2",
