--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "41.0.0",
     "expo-app-loading": "^1.0.3",
     "expo-font": "~9.1.0",
+    "expo-image-picker": "^10.1.4",
     "expo-linear-gradient": "~9.1.0",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.5.4",
