Chore: add new alias paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "isolatedModules": true,
     "moduleResolution": "node",
     "paths": {
+      "assets/*": ["./src/assets/*"],
       "common/*": ["./src/common/*"],
       "components/*": ["./src/components/*"],
       "containers/*": ["./src/containers/*"],
@@ -23,6 +24,7 @@
       "images/*": ["./src/assets/images/*"],
       "interfaces/*": ["./src/common/interfaces/*"],
       "screens/*": ["./src/screens/*"],
+      "stacks/*": ["./src/stacks/*"],
       "styles/*": ["./src/styles/*"],
       "tabs/*": ["./src/tabs/*"],
       "types/*": ["./src/common/types*"],
