--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@react-navigation/stack": "^5.14.4",
     "expo": "41.0.0",
     "expo-app-loading": "^1.0.3",
+    "expo-auth-session": "~3.2.3",
     "expo-font": "~9.1.0",
     "expo-image-picker": "^10.1.4",
     "expo-linear-gradient": "~9.1.0",
+    "expo-random": "~11.1.2",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.5.4",
     "fb-watchman": "^2.0.1",
@@ -29,6 +31,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-animated-number": "^1.2.0",
     "react-native-animated-pagination-dots": "^0.1.72",
     "react-native-exception-handler": "^2.10.10",
     "react-native-fast-image": "^8.3.4",
