--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.5.4",
     "fb-watchman": "^2.0.1",
-    "formik": "^2.2.6",
+    "formik": "^2.2.9",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "0.63.3",
@@ -40,6 +40,7 @@
     "react-native-pager-view": "5.0.12",
     "react-native-qrcode-svg": "^6.1.1",
     "react-native-reanimated": "^2.1.0",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-tab-view": "^3.0.1",
