Chore: bump formik and install rn-clipboard

--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.5.4",
     "fb-watchman": "^2.0.1",
-    "formik": "^2.2.6",
+    "formik": "^2.2.9",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "0.63.3",
     "react-native-animated-number": "^1.2.0",
     "react-native-animated-pagination-dots": "^0.1.72",
+    "react-native-clipboard": "^0.0.5",
     "react-native-exception-handler": "^2.10.10",
     "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "~1.10.2",
