--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "41.0.0",
     "expo-app-loading": "^1.0.3",
     "expo-auth-session": "~3.2.3",
+    "expo-clipboard": "~1.0.2",
     "expo-font": "~9.1.0",
     "expo-image-picker": "^10.1.4",
     "expo-linear-gradient": "~9.1.0",
@@ -33,7 +34,6 @@
     "react-native": "0.63.3",
     "react-native-animated-number": "^1.2.0",
     "react-native-animated-pagination-dots": "^0.1.72",
-    "react-native-clipboard": "^0.0.5",
     "react-native-exception-handler": "^2.10.10",
     "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "~1.10.2",
