--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "name": "1on1",
     "slug": "1on1",
     "version": "0.0.0",
+    "scheme": "one-on-one",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
