--- a/package.json
+++ b/package.json
@@ -19,14 +19,20 @@
     "@react-navigation/stack": "^5.14.4",
     "expo": "41.0.0",
     "expo-app-loading": "^1.0.3",
+    "expo-application": "~3.1.2",
     "expo-auth-session": "~3.2.3",
     "expo-clipboard": "~1.0.2",
+    "expo-constants": "~10.1.3",
     "expo-font": "~9.1.0",
+    "expo-google-app-auth": "^8.2.2",
     "expo-image-picker": "^10.1.4",
     "expo-linear-gradient": "~9.1.0",
+    "expo-linking": "~2.2.3",
     "expo-random": "~11.1.2",
+    "expo-secure-store": "~10.1.0",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.5.4",
+    "expo-web-browser": "~9.1.0",
     "fb-watchman": "^2.0.1",
     "formik": "^2.2.9",
     "react": "16.13.1",
@@ -34,6 +40,7 @@
     "react-native": "0.63.3",
     "react-native-animated-number": "^1.2.0",
     "react-native-animated-pagination-dots": "^0.1.72",
+    "react-native-dotenv": "^3.0.0",
     "react-native-exception-handler": "^2.10.10",
     "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "~1.10.2",
