--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/material-top-tabs": "^6.0.0-next.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "cross-fetch": "^3.1.4",
     "expo": "41.0.0",
     "expo-app-loading": "^1.0.3",
     "expo-application": "~3.1.2",
