--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-exception-handler": "^2.10.10",
     "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-modal": "^11.10.0",
     "react-native-pager-view": "5.0.12",
     "react-native-qrcode-svg": "^6.1.1",
