chore: install husky

--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "eject": "expo eject",
     "test": "jest --watchAll"
   },
+  "husky": {
+    "hooks": {
+        "pre-commit":"",
+        "pre-push":""
+    }
+  },
   "dependencies": {
     "@expo/metro-config": "^0.1.65",
     "@react-native-async-storage/async-storage": "^1.13.0",
@@ -76,6 +82,7 @@
     "eslint-config-universe": "^7.0.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-native": "^3.10.0",
+    "husky": "^7.0.1",
     "prettier": "^2.2.1",
     "react-error-boundary": "^3.1.1",
     "react-native-bundle-visualizer": "^2.2.1",
