--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "1on1",
     "slug": "1on1",
-    "version": "0.0.0",
+    "version": "1.0.0",
     "scheme": "one-on-one",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -17,9 +17,13 @@
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
-      "requireFullScreen": true
+      "requireFullScreen": true,
+      "bundleIdentifier": "com.gimbalabs.oneonone",
+      "buildNumber": "1.0.0"
     },
     "android": {
+      "package": "com.gimbalabs.oneonone",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
