--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "1on1",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "web": "expo start --web",
     "eject": "expo eject",
     "test": "jest --watchAll",
@@ -34,6 +33,7 @@
     "expo-linking": "~2.2.3",
     "expo-random": "~11.1.2",
     "expo-secure-store": "~10.1.0",
+    "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.5.4",
     "expo-web-browser": "~9.1.0",
@@ -41,7 +41,7 @@
     "formik": "^2.2.9",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "0.63.3",
+    "react-native": "~0.63.4",
     "react-native-animated-number": "^1.2.0",
     "react-native-animated-pagination-dots": "^0.1.72",
     "react-native-dotenv": "^3.0.0",
@@ -56,8 +56,10 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^3.0.1",
     "react-native-typography": "^1.4.1",
+    "react-native-unimodules": "~0.13.3",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
     "yup": "^0.32.9"
@@ -90,5 +92,6 @@
   "lint-staged": {
     "*.js": "eslint --cache --fix",
     "*.{js,css,md}": "prettier --write"
-  }
+  },
+  "version": "1.0.0"
 }
