--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "expo-constants": "~10.1.3",
     "expo-font": "~9.1.0",
     "expo-google-app-auth": "^8.2.2",
-    "expo-image-picker": "^10.1.4",
     "expo-linear-gradient": "~9.1.0",
     "expo-linking": "~2.2.3",
     "expo-random": "~11.1.2",
@@ -48,9 +47,11 @@
     "react-native-exception-handler": "^2.10.10",
     "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-image-picker": "^4.0.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-modal": "^11.10.0",
     "react-native-pager-view": "5.0.12",
+    "react-native-permissions": "^3.0.5",
     "react-native-qrcode-svg": "^6.1.1",
     "react-native-reanimated": "^2.1.0",
     "react-native-responsive-screen": "^1.4.2",
