--- a/ios/1on1.xcodeproj/xcshareddata/xcschemes/1on1.xcscheme
+++ b/ios/1on1.xcodeproj/xcshareddata/xcschemes/1on1.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "1on1.app"
+               BuildableName = "oneonone.app"
                BlueprintName = "1on1"
                ReferencedContainer = "container:1on1.xcodeproj">
             </BuildableReference>
@@ -55,7 +55,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "1on1.app"
+            BuildableName = "oneonone.app"
             BlueprintName = "1on1"
             ReferencedContainer = "container:1on1.xcodeproj">
          </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "1on1.app"
+            BuildableName = "oneonone.app"
             BlueprintName = "1on1"
             ReferencedContainer = "container:1on1.xcodeproj">
          </BuildableReference>
