--- a/ios/1on1/Info.plist
+++ b/ios/1on1/Info.plist
@@ -40,6 +40,10 @@
         </array>
       </dict>
     </array>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>Allow users to upload their own gallery image</string>
+    <key>NSCameraUsageDescription</key>
+    <string>Allow users to make a photo and upload it</string>
     <key>CFBundleVersion</key>
     <string>1.0.0</string>
     <key>LSRequiresIPhoneOS</key>
