--- a/ios/Podfile
+++ b/ios/Podfile
@@ -26,6 +26,8 @@ target '1on1' do
   pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
   pod 'Permission-PhotoLibrary', :path => "#{permissions_path}/PhotoLibrary"
   pod 'Permission-MediaLibrary', :path => "#{permissions_path}/MediaLibrary"
+  
+  pod 'AppAuth'
 
 end
 
