--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "1on1",
   "scripts": {
-    "start": "react-native start",
+    "start": "NODE_ENV=development react-native start",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "web": "expo start --web",
@@ -19,7 +19,7 @@
     "@react-navigation/material-top-tabs": "^6.0.0-next.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
-    "cross-fetch": "^3.1.4",
+    "axios": "^0.21.1",
     "expo": "41.0.0",
     "expo-app-loading": "^1.0.3",
     "expo-application": "~3.1.2",
