--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-GOOGLE_CLIENT_ID=315087545459-kgit2f5bnqe990s9mih4s0pmkuenqqv7.apps.googleusercontent.com
-GOOGLE_CLIENT_IOS_ID=315087545459-9adme944uh4kf5glegcqpkfedk1mhrvj.apps.googleusercontent.com
-GOOGLE_CLIENT_ANDROID_ID=315087545459-qhspb16nvd9rn46tu0fnv19qv0eso8u4.apps.googleusercontent.com
-CLIENT_APP_URL='https://auth.expo.io/@piotrrr/1on1'
+GOOGLE_CLIENT_ID=1234
+GOOGLE_CLIENT_IOS_ID=1234
+GOOGLE_CLIENT_ANDROID_ID=1234
+CLIENT_APP_URL='client app url'
+API_URL='prod url'
