--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "expo-linear-gradient": "~9.1.0",
     "expo-linking": "~2.2.3",
     "expo-random": "~11.1.2",
-    "expo-secure-store": "~10.1.0",
+    "expo-secure-store": "^10.2.0",
     "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.5.4",
@@ -49,6 +49,7 @@
     "react-native-image-picker": "^4.0.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-modal": "^11.10.0",
+    "react-native-modal-selector": "PiotrNap/react-native-modal-selector",
     "react-native-pager-view": "5.0.12",
     "react-native-permissions": "^3.0.5",
     "react-native-qrcode-svg": "^6.1.1",
