[node_modules] add tweetnacl & crypto shims for node apis

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "web": "expo start --web",
     "eject": "expo eject",
     "test": "jest --watchAll",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "postinstall": "rn-nodeify --install fs,dgram,process,path,console --hack"
   },
   "dependencies": {
     "@expo/metro-config": "^0.1.65",
@@ -19,7 +20,16 @@
     "@react-navigation/material-top-tabs": "^6.0.0-next.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "@tradle/react-native-http": "^2.0.0",
+    "assert": "^1.1.1",
     "axios": "^0.21.1",
+    "base64-js": "^1.5.1",
+    "browserify-zlib": "~0.1.4",
+    "buffer": "^4.9.1",
+    "console-browserify": "^1.2.0",
+    "constants-browserify": "^1.0.0",
+    "dns.js": "^1.0.1",
+    "domain-browser": "^1.1.1",
     "expo": "41.0.0",
     "expo-app-loading": "^1.0.3",
     "expo-application": "~3.1.2",
@@ -37,32 +47,51 @@
     "expo-web-browser": "~9.1.0",
     "fb-watchman": "^2.0.1",
     "formik": "^2.2.9",
+    "https-browserify": "~0.0.0",
+    "path-browserify": "^0.0.0",
+    "punycode": "^1.2.4",
+    "querystring-es3": "~0.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-animated-number": "^1.2.0",
     "react-native-animated-pagination-dots": "^0.1.72",
+    "react-native-crypto": "^2.2.0",
     "react-native-dotenv": "^3.0.0",
     "react-native-exception-handler": "^2.10.10",
     "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-image-picker": "^4.0.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
+    "react-native-level-fs": "^3.0.1",
     "react-native-modal": "^11.10.0",
-    "react-native-modal-selector": "PiotrNap/react-native-modal-selector",
+    "react-native-modal-selector": "git+https://github.com/PiotrNap/react-native-modal-selector.git",
+    "react-native-os": "^1.0.1",
     "react-native-pager-view": "5.0.12",
     "react-native-permissions": "^3.0.5",
     "react-native-qrcode-svg": "^6.1.1",
+    "react-native-randombytes": "^3.6.1",
     "react-native-reanimated": "^2.1.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^3.0.1",
+    "react-native-tcp": "^3.2.1",
     "react-native-typography": "^1.4.1",
+    "react-native-udp": "^2.7.0",
     "react-native-unimodules": "~0.13.3",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
+    "readable-stream": "1.0.33",
+    "stream-browserify": "^1.0.0",
+    "string_decoder": "~0.10.25",
+    "timers-browserify": "^1.0.1",
+    "tty-browserify": "0.0.0",
+    "tweet-nacl-react-native-expo": "^1.0.3",
+    "url": "~0.10.1",
+    "utf8": "^3.0.0",
+    "vm-browserify": "0.0.4",
     "yup": "^0.32.9"
   },
   "devDependencies": {
@@ -84,6 +113,7 @@
     "prettier": "^2.2.1",
     "react-error-boundary": "^3.1.1",
     "react-native-bundle-visualizer": "^2.2.1",
+    "rn-nodeify": "^10.3.0",
     "typescript": "^4.2.4"
   },
   "eslintConfig": {
@@ -94,5 +124,57 @@
     "*.js": "eslint --cache --fix",
     "*.{js,css,md}": "prettier --write"
   },
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "react-native": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
+  },
+  "browser": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dns": "dns.js",
+    "net": "react-native-tcp",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "dgram": "react-native-udp",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
+  }
 }
