--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ GOOGLE_CLIENT_ID=1234
 GOOGLE_CLIENT_IOS_ID=1234
 GOOGLE_CLIENT_ANDROID_ID=1234
 CLIENT_APP_URL='client app url'
-API_URL='http://localhost:3000'
+API_URL='back end server api here'
