Install react-native-slider-color-picker & tinycolor2

--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "react-native-dotenv": "^3.0.0",
     "react-native-exception-handler": "^2.10.10",
     "react-native-fast-image": "^8.3.4",
-    "react-native-gesture-handler": "~1.10.2",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.0.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-level-fs": "^3.0.1",
@@ -70,10 +70,11 @@
     "react-native-permissions": "^3.0.5",
     "react-native-qrcode-svg": "^6.1.1",
     "react-native-randombytes": "^3.6.1",
-    "react-native-reanimated": "^2.1.0",
+    "react-native-reanimated": "^2.2.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-slider-color-picker": "^2.2.2",
     "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^3.0.1",
     "react-native-tcp": "^3.2.1",
@@ -86,6 +87,7 @@
     "stream-browserify": "^1.0.0",
     "string_decoder": "~0.10.25",
     "timers-browserify": "^1.0.1",
+    "tinycolor2": "^1.4.2",
     "tty-browserify": "0.0.0",
     "tweet-nacl-react-native-expo": "git+https://github.com/PiotrNap/react-native-expo-tweet-nacl.git",
     "url": "~0.10.1",
