--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-native-async-storage/async-storage": "^1.13.0",
     "@react-native-community/datetimepicker": "3.2.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-picker/picker": "1.9.11",
+    "@react-native-picker/picker": "^2.1.0",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/material-top-tabs": "^6.0.0-next.10",
     "@react-navigation/native": "^5.9.4",
@@ -76,6 +76,7 @@
     "react-native-screens": "~3.0.0",
     "react-native-slider-color-picker": "^2.2.2",
     "react-native-svg": "^12.1.1",
+    "react-native-switch-selector": "^2.1.4",
     "react-native-tab-view": "^3.0.1",
     "react-native-tcp": "^3.2.1",
     "react-native-typography": "^1.4.1",
