--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,8 @@
     "esModuleInterop": true,
     "isolatedModules": true,
     "moduleResolution": "node",
+    "useUnknownInCatchVariables": false,
+    "experimentalDecorators": true,
     "paths": {
       "assets/*": ["./src/assets/*"],
       "common/*": ["./src/common/*"],
