--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "esModuleInterop": true,
     "isolatedModules": true,
     "moduleResolution": "node",
+    "noUnusedLocals": true,
     "useUnknownInCatchVariables": false,
     "experimentalDecorators": true,
     "paths": {
