--- a/.env.development
+++ b/.env.development
@@ -4,4 +4,4 @@ GOOGLE_CLIENT_ANDROID_ID=315087545459-qhspb16nvd9rn46tu0fnv19qv0eso8u4.apps.goog
 CLIENT_APP_URL='https://auth.expo.io/@piotrrr/1on1'
 ANDROID_API_URL='http://10.0.2.2:3000'
 IOS_API_URL='http://localhost:3000'
-
+MOBILE_APP_SCHEMA=bonfire://
