--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,20 +2,33 @@
 
 buildscript {
     ext {
-        buildToolsVersion = "29.0.3"
+        buildToolsVersion = "30.0.2"
         minSdkVersion = 21
         compileSdkVersion = 30
         targetSdkVersion = 30
+        supportLibVersion = "28.0.0"
+        androidXAnnotation = "1.1.0"
+        firebaseIidVersion = "19.0.1" // DeviceInfo
+        kotlinVersion = "1.3.10"
+
     }
     repositories {
         google()
         jcenter()
+        // rust-android-gradle
+        maven {
+            url "https://plugins.gradle.org/m2/"
+            google()
+        }
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:4.1.0")
+        classpath('com.android.tools.build:gradle:3.5.3')
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        // required by cardano rust bindings
+        classpath 'gradle.plugin.org.mozilla.rust-android-gradle:plugin:0.8.3'
     }
 }
 
@@ -30,7 +43,6 @@ allprojects {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
         }
-
         google()
         jcenter()
         maven { url 'https://www.jitpack.io' }
