--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,7 +1,8 @@
 rootProject.name = '1on1'
-
-apply from: '../node_modules/react-native-unimodules/gradle.groovy'
-includeUnimodulesProjects()
+include ':@emurgo_react-native-haskell-shelley'
+project(':@emurgo_react-native-haskell-shelley').projectDir = new File(rootProject.projectDir, '../node_modules/@emurgo/react-native-haskell-shelley/android')
+include ':@emurgo_react-native-haskell-shelley'
+project(':@emurgo_react-native-haskell-shelley').projectDir = new File(rootProject.projectDir, '../node_modules/@emurgo/react-native-haskell-shelley/android')
 
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle");
 applyNativeModulesSettingsGradle(settings)
