--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "1on1",
+  "author": "Piotr Napierala",
+  "organization": "Gimbalabs",
   "scripts": {
     "start": "NODE_ENV=development react-native start",
     "android": "react-native run-android",
@@ -10,7 +12,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@expo/metro-config": "^0.1.65",
+    "@emurgo/react-native-haskell-shelley": "^3.1.3",
     "@pnap/react-native-search-bar": "^1.0.4",
     "@react-native-async-storage/async-storage": "^1.13.0",
     "@react-native-community/datetimepicker": "3.2.0",
@@ -21,36 +23,11 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "@tradle/react-native-http": "^2.0.0",
-    "assert": "^1.1.1",
     "axios": "^0.21.1",
     "base64-js": "^1.5.1",
-    "browserify-zlib": "~0.1.4",
-    "buffer": "^4.9.1",
-    "console-browserify": "^1.2.0",
-    "constants-browserify": "^1.0.0",
-    "dns.js": "^1.0.1",
-    "domain-browser": "^1.1.1",
-    "expo": "41.0.0",
-    "expo-app-loading": "^1.0.3",
-    "expo-application": "~3.1.2",
-    "expo-auth-session": "~3.2.3",
-    "expo-clipboard": "~1.0.2",
-    "expo-constants": "~10.1.3",
-    "expo-font": "~9.1.0",
-    "expo-linear-gradient": "~9.1.0",
-    "expo-random": "^11.2.0",
-    "expo-secure-store": "^10.2.0",
-    "expo-splash-screen": "~0.10.2",
-    "expo-status-bar": "~1.0.3",
-    "expo-updates": "~0.5.4",
-    "expo-web-browser": "~9.1.0",
     "fb-watchman": "^2.0.1",
     "formik": "^2.2.9",
-    "https-browserify": "~0.0.0",
-    "path-browserify": "^0.0.0",
-    "punycode": "^1.2.4",
     "qs": "^6.10.1",
-    "querystring-es3": "~0.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
@@ -82,16 +59,10 @@
     "react-native-tcp": "^3.2.1",
     "react-native-typography": "^1.4.1",
     "react-native-udp": "^2.7.0",
-    "react-native-unimodules": "~0.13.3",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
-    "readable-stream": "1.0.33",
-    "stream-browserify": "^1.0.0",
-    "string_decoder": "~0.10.25",
-    "timers-browserify": "^1.0.1",
+    "safe-buffer": "^5.2.1",
     "tinycolor2": "^1.4.2",
-    "tty-browserify": "0.0.0",
-    "tweet-nacl-react-native-expo": "git+https://github.com/PiotrNap/react-native-expo-tweet-nacl.git",
     "url": "~0.10.1",
     "utf8": "^3.0.0",
     "vm-browserify": "0.0.4",
@@ -116,7 +87,6 @@
     "prettier": "^2.2.1",
     "react-error-boundary": "^3.1.1",
     "react-native-bundle-visualizer": "^2.2.1",
-    "rn-nodeify": "^10.3.0",
     "typescript": "^4.4.3"
   },
   "eslintConfig": {
@@ -133,40 +103,11 @@
     "console": "console-browserify",
     "constants": "constants-browserify",
     "crypto": "react-native-crypto",
-    "dns": "dns.js",
     "net": "react-native-tcp",
-    "domain": "domain-browser",
     "http": "@tradle/react-native-http",
     "https": "https-browserify",
     "os": "react-native-os",
     "path": "path-browserify",
-    "querystring": "querystring-es3",
-    "fs": "react-native-level-fs",
-    "_stream_transform": "readable-stream/transform",
-    "_stream_readable": "readable-stream/readable",
-    "_stream_writable": "readable-stream/writable",
-    "_stream_duplex": "readable-stream/duplex",
-    "_stream_passthrough": "readable-stream/passthrough",
-    "dgram": "react-native-udp",
-    "stream": "stream-browserify",
-    "timers": "timers-browserify",
-    "tty": "tty-browserify",
-    "vm": "vm-browserify",
-    "tls": false
-  },
-  "browser": {
-    "zlib": "browserify-zlib",
-    "console": "console-browserify",
-    "constants": "constants-browserify",
-    "crypto": "react-native-crypto",
-    "dns": "dns.js",
-    "net": "react-native-tcp",
-    "domain": "domain-browser",
-    "http": "@tradle/react-native-http",
-    "https": "https-browserify",
-    "os": "react-native-os",
-    "path": "path-browserify",
-    "querystring": "querystring-es3",
     "fs": "react-native-level-fs",
     "_stream_transform": "readable-stream/transform",
     "_stream_readable": "readable-stream/readable",
